--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,26 @@ h4{
     font-size: 1.3rem;
 }
 
+.light-text{
+    color: var(--primary-color);
+}
+
+.dark-text{
+    color: var(--secondary-color);
+}
+
+.red{
+    background-color: red;
+}
+
+.yellow{
+    background-color: yellow;
+}
+
+.green{
+    background-color: green;
+}
+
 body{
     font-family: Helvetica, sans-serif;
     background-color: var(--primary-color);
@@ -64,6 +84,11 @@ main{
     font-size: 1.2rem;
     border: 2px solid var(--secondary-color);
     border-radius: 10px;
+}
+
+
+.card-body {
+    padding: 2.5%;
 }
   
 
